# my_aoc

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
2024/jul/: day1.jl
src/2day/: aocworking.ipynb
