[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = "7.4.0"

[[bin]]
name = "1day"
path = "src/1day/bin/main.rs"

[[bin]]
name = "2day"
path = "src/2day/bin/main.rs"

[[bin]]
name = "3day"
path = "src/3day/bin/main.rs"

[[bin]]
name = "4day"
path = "src/4day/bin/main.rs"

[[bin]]
name = "5day"
path = "src/5day/bin/main.rs"

[[bin]]
name = "7day"
path = "src/7day/bin/main.rs"

[[bin]]
name = "9day"
path = "src/9day/bin/main.rs"
